<resources>
    <string name="app_name">"Эллой BT"</string>
    <string name="www_alloynn_com">www.alloynn.com</string>
    <string name="inverter_technology">INVERTER TECHNOLOGY</string>
    <string name="app_version">v1.0.0</string>
    <string name="fb_description">search BT devices</string>
    <string name="default_model_string">MC-315T2 AC/DC</string>
    <string name="default_mac_address">1F:3G:5G:12:34:6F</string>
    <string name="default_series_number">013400002102007</string>
    <string name="mac_address_hint">MAC-адрес</string>
    <string name="series_number_hint">Серийный №</string>
    <string name="connecting_state">Соединение</string>
    <string name="initialization_state">Инициализация</string>
    <string name="disconnected_state">Отключено</string>
    <string name="disconnecting_state">Отключение</string>
    <string name="real_current_text">В</string>
    <string name="real_current_init_text">0</string>
    <string name="set_current_text">А</string>
    <string name="default_weld_type_text">AC+DC</string>
    <string name="current_text">Ток</string>
    <string name="default_wire_type_text">LiftTIG</string>
    <string name="torch_mode_text">2T</string>
    <string name="wave_form_text">Sinus</string>
    <string name="diameter_electrode_text">1.0 мм</string>
    <string name="page_head_text_monitor">Монитор</string>
    <string name="page_head_text_control">Настройки</string>
    <string name="page_head_text_graph">График</string>
    <string name="page_head_text_errors">Ошибки</string>
    <string name="page_head_text_stat">Инфо</string>
    <string name="page_head_text_programs">Программы</string>
    <string name="default_error_text">12:03:2022 14:56</string>
    <string name="default_info_text">26:12:34:56</string>
    <string name="default_error_description_text">Ошибка обмена информацией между платой источника питания и платой механизма подачи проволоки</string>
    <string name="default_info_description_text">Общее время работы аппарата</string>
    <string name="default_param_description_text">Время стартового тока</string>
    <string name="min_param_hint_text">MIN:</string>
    <string name="max_param_hint_text">MAX:</string>
    <string name="min_param_text">0.0</string>
    <string name="max_param_text">7,0</string>
    <string name="value_param_text">3,6</string>
    <string name="confirm_param_button_text">подтвердить</string>
    <string name="not_devices_text">Поиск оборудования "Эллой"</string>
    <string name="not_bluetooth_enabled">Для поиска устройств требуется включить Bluetooth</string>
    <string name="enable_bluetooth_text">Включить Bluetooth</string>
    <string name="password_dialog_title">Для записи параметров введите пароль доступа</string>
    <string name="backstack_dialog_title">Отключиться от управления данным аппаратом</string>
    <string name="password_dialog_pos_button_text">Ок</string>
    <string name="password_dialog_neg_button_text">Отмена</string>
    <string name="password_edit_text_hint_text">* * * * *</string>
    <string name="token_success_text">Изменение параметров разрешено</string>
    <string name="token_fail_text">Неправильный пароль</string>
    <string name="fast_programs_button_text">Пусто</string>
    <string name="program_default_text">Пусто</string>
    <string name="no_password_entered">Нет доступа к записи. Необходимо ввести пароль</string>
</resources>