<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/paramsImageBackGround"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/backgrnd" />
    <TextView
        android:id="@+id/minTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:singleLine="false"
        android:text="@string/min_param_text"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/minHintTextView"
        app:layout_constraintStart_toEndOf="@+id/maxHintTextView" />

    <TextView
        android:id="@+id/maxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/max_param_text"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/maxHintTextView"
        app:layout_constraintStart_toStartOf="@+id/minTextView" />

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin"
        android:singleLine="false"
        android:text="@string/value_param_text"
        android:textColor="@color/dark_yellow"
        android:textSize="@dimen/param_value_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/maxTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/maxHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:singleLine="false"
        android:text="@string/max_param_hint_text"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/minHintTextView" />

    <TextView
        android:id="@+id/minHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/min_param_hint_text"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/default_param_description_text"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/valueTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/item_image_size"
        android:layout_height="@dimen/item_image_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_param_settings" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="65dp" />
</androidx.constraintlayout.widget.ConstraintLayout>