<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/main_margin">

    <TextView
        android:id="@+id/inverterModelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:text="@string/default_model_string"
        android:textColor="@color/dark_yellow"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/macAddressHintTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/mac_address_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inverterModelTextView" />


    <TextView
        android:id="@+id/seriesNumberHintTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/series_number_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/macAddressHintTextView" />

    <TextView
        android:id="@+id/macAddressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_mac_address"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/macAddressHintTextView" />

    <TextView
        android:id="@+id/seriesNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_series_number"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/seriesNumberHintTextView" />

    <ImageView
        android:id="@+id/inverterImage"
        android:layout_width="@dimen/item_image_size"
        android:layout_height="@dimen/item_image_size"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/rssi"
        android:layout_width="@dimen/item_image_size"
        android:layout_height="@dimen/item_image_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/main_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inverterImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_signal_bar"
        tools:src="@drawable/ic_signal_2_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="129dp" />

</androidx.constraintlayout.widget.ConstraintLayout>