<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageBgrd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgrnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/upPanelImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/slide_menu_back" />

    <LinearLayout
        android:id="@+id/upPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="@id/upPanelImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/torchModeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:text="@string/torch_mode_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/monitor_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/lifTigImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_image_size"
            android:layout_gravity="center"
            android:layout_weight="20"
            app:srcCompat="@drawable/arc_ignition_type"
            tools:src="@drawable/arc_ignition_type" />

        <TextView
            android:id="@+id/weldTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/default_weld_type_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/monitor_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/waveFormImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_image_size"
            android:layout_gravity="center"
            android:layout_weight="20"
            app:srcCompat="@drawable/wave_form_bar"
            tools:src="@drawable/wave_meander" />

        <TextView
            android:id="@+id/diamElectrodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/diameter_electrode_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/monitor_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text=""
        android:textColor="@color/error_red"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upPanelImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>